--- a/bio.html
+++ b/bio.html
@@ -38,15 +38,29 @@
 					</header>
 <p>
                     Antimo Marrazzo is a computational condensed-matter physicist and materials scientist working on the theory and simulation of materials, with a focus on the design and discovery of novel topological, quantum and two-dimensional materials, and on the development of electronic-structure methods and data-driven approaches. He obtained his BSc and MSc in Physics cum laude at University of Trieste (Italy) in 2013 and 2015 respectively, with a thesis on the Local Properties of the Orbital Magnetization, the Anomalous Hall Effect and the Localization Tensor in Magnetic Metals.
-                    In October 2015 he moved to the group of Nicola Marzari at the École Polytechnique Fédérale de Lausanne (EPFL, Switzerland) where got his PhD in Materials Science and Engineering in November 2019, with a thesis on Electronic Structure and Topology of Novel Materials, winning the 2020 EPFL Doctoral Program Thesis Distinction (awarded to the 8% best PhD thesis), the SAIS prize 2021 (best STEM PhD 2021 among Italian-speaking doctoral students in Switzerland) and the Wasserman Award 2021 (for innovative and high-level research in the field of new materials). He stayed at EPFL as a post-doc with Nicola Marzari until 2020 and from April 2021 to March 2024 he worked as a junior assistant professor (RTDa) at the Physics Department of University of Trieste (Italy). In April 2024 he started as a tenure-track assistant professor (RTDb) at the International School for Advanced Studies (SISSA) in Trieste. He has authored 23 publications, more than half as first or last author, with more than 3500 citations (source Scopus).
+                    In October 2015 he moved to the group of Nicola Marzari at the École Polytechnique Fédérale de Lausanne (EPFL, Switzerland) where got his PhD in Materials Science and Engineering in November 2019, with a thesis on Electronic Structure and Topology of Novel Materials, winning the 2020 EPFL Doctoral Program Thesis Distinction (awarded to the 8% best PhD thesis), the SAIS prize 2021 (best STEM PhD 2021 among Italian-speaking doctoral students in Switzerland) and the Wasserman Award 2021 (for innovative and high-level research in the field of new materials). He stayed at EPFL as a post-doc with Nicola Marzari until 2020 and from April 2021 to March 2024 he worked as a junior assistant professor (RTDa) at the Physics Department of University of Trieste (Italy). In April 2024 he started as a tenure-track assistant professor (RTDb) at the International School for Advanced Studies (SISSA) in Trieste. He has authored 25 publications, more than half as first or last author, with more than 3700 citations (source Scopus).
 					In January 2022 he attained the Italian national scientific habilitation (ASN) as associate professor in theoretical condensed matter physics (FIS/03 - 02/B2).
 
 </p>
-		<!-- Scripts -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/skel.min.js"></script>
-        <script src="assets/js/util.js"></script>
-        <script src="assets/js/main.js"></script>
+
+
+<!-- Footer -->
+<footer id="footer">
+	<div class="inner">
+			<div class="flex">
+					<div class="copyright">
+							<!-- &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.-->
+							2021-2025 Antimo Marrazzo
+					</div>
+			</div>
+	</div>
+</footer>
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/skel.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
 
 </body>
 </html>
+
